# pyridine

./: .env.example  .gitignore  MovingAverageStrategyTester_result.csv  README.md  pyproject.toml  trades.csv
src/: main.py  rsiBacktest.py  rsiStrategy.py  test_main.py
src/config/: loader.py  strategies.json
src/modules/auth/: api.py
src/modules/engine/: backtester.py  trade_executor.py
src/modules/strategy/: base.py  base_test.py  moving_average_strategy.py  rsi_strategy.py  test_moving_average_strategy.py
src/strategies/: backtest.py  base.py  engine.py  rsi_breakout.py
src/tests/: test_engine.py  test_indicators.py  test_rsi_breakout.py
src/utils/: action_logger.py  api_client.py  envs.py  funcs.py  indicators.py  kite.py
